--- a/WarehouseEcommerce/Views/Theme/Smart/Products/list.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Products/list.cshtml
@@ -154,7 +154,9 @@
 
 
 <script>
-    function GetSortedList(e) {
+    function GetSortedList(e)
+    {
+        debugger;
         var sortvalue = parseInt(e.currentTarget.value);
 
         var groupId = $("#ProductGroups").val();
@@ -166,7 +168,7 @@
         var pageSize = $("#input-limit :selected").val();
         var valuesparam = $("#valuesParameter").val();
         var subCategory = $("#SubCategoryId").val();
-        window.location.href = basePath + "/Products/ProductCategories?productGroup=" + groupId + "&sortOrder=" + sortvalue + "&currentFilter=" + currentFilter + "&searchString=" + searchstring + "&page=" + pagenumber + "&pagesize=" + pageSize + "&department=" + departmentId + "&SubCategory=" + subCategory + "&values=" + valuesparam;
+        window.location.href = basePath + "/Products/list?productGroup=" + groupId + "&sortOrder=" + sortvalue + "&currentFilter=" + currentFilter + "&searchString=" + searchstring + "&page=" + pagenumber + "&pagesize=" + pageSize + "&department=" + departmentId + "&SubCategory=" + subCategory + "&values=" + valuesparam;
     }
 
     function PageSizeChanges(e) {
@@ -180,7 +182,7 @@
         var searchstring = $("#searchString").val();
         var subCategory = $("#SubCategoryId").val();
         var valuesparam = $("#valuesParameter").val();
-        window.location.href = basePath + "/Products/ProductCategories?productGroup=" + groupId + "&sortOrder=" + sortvalue + "&currentFilter=" + currentFilter + "&searchString=" + searchstring + "&page=" + pagenumber + "&pagesize=" + pageSize + "&department=" + departmentId + "&SubCategory=" + subCategory + "&values=" + valuesparam;
+        window.location.href = basePath + "/Products/list?productGroup=" + groupId + "&sortOrder=" + sortvalue + "&currentFilter=" + currentFilter + "&searchString=" + searchstring + "&page=" + pagenumber + "&pagesize=" + pageSize + "&department=" + departmentId + "&SubCategory=" + subCategory + "&values=" + valuesparam;
     }
 
 </script>
