--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -126,7 +126,7 @@
         </div>
     </div>
 </section>
-<section class="nb_sec nb_feat_prod_sec nb_umayalso_sec">
+@*<section class="nb_sec nb_feat_prod_sec nb_umayalso_sec">
     <div class="container">
         <div class="nb_header_style2">
             <h3>You may also like</h3>
@@ -231,7 +231,7 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
 <script>
     $(document).ready(function () {
 
