--- a/WarehouseEcommerce/Views/Theme/University/Shared/_BlogPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_BlogPartial.cshtml
@@ -11,25 +11,30 @@
             <div class="row">
                 @foreach (var item in Model)
                 {
+               
                     <div class="col-sm-12 col-md-4">
                         <div class="nb_ftb_box">
-                            <span class="nb_fb_img">
-                                <img src="@(!string.IsNullOrEmpty(item.Image)? ViewBag.BaseFilePath + item.Image : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@item.ImageAltTag" />
-                            </span>
-                            <div class="nb_fb_con">
-                                <div class="date">
-                                    @item.DateCreated.ToString("MMMM dd, yyyy")
+                            <a href="@Url.Action("page","Home",new {pageUrl=item.pageUrl,BlogDetail="true"})">
+                                <span class="nb_fb_img">
+                                    <img src="@(!string.IsNullOrEmpty(item.Image)? ViewBag.BaseFilePath + item.Image : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@item.ImageAltTag" />
+                                </span>
+                                <div class="nb_fb_con">
+                                    <div class="date">
+                                        @item.DateCreated.ToString("MMMM dd, yyyy")
+                                    </div>
+                                    <h5 class="heading">
+                                        @item.Title
+                                    </h5>
+                                    <p class="content">
+                                        @item.ShortDescription
+                                    </p>
+
+
                                 </div>
-                                <h5 class="heading">
-                                    @item.Title
-                                </h5>
-                                <p class="content">
-                                    @item.ShortDescription
-                                </p>
-                            </div>
+                            </a>
                         </div>
                     </div>
-
+               
                 }
             </div>
         </div>
