--- a/WarehouseEcommerce/Views/Theme/University/Shared/_FooterPartialArea.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_FooterPartialArea.cshtml
@@ -1,5 +1,5 @@
 ﻿  <!-- footer section -->
-@model Ganedata.Core.Services.caTenantWebsites
+@model Ganedata.Core.Entities.Domain.TenantWebsites
 <footer class="nb_footer">
     <div class="container">
         <div class="nb_footersec_inner">
