--- a/WarehouseEcommerce/Views/Theme/University/Shared/_TopCategoryPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_TopCategoryPartial.cshtml
@@ -10,7 +10,8 @@
                 <ul>
                     @foreach (var item in Model)
                     {
-                        <li>
+                        var imagePath=!string.IsNullOrEmpty(item.Image) ? ViewBag.BaseFilePath + item.Image : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif";
+                        <li style="background-image:url(@imagePath)">
                             <div>
                                 <a href="@Url.Action("list","Products",new {category=item.Name })">
                                     <h2>@item.Name</h2>
