--- a/WMS/Content/Theme/Default/Site.css
+++ b/WMS/Content/Theme/Default/Site.css
@@ -1969,6 +1969,27 @@ input[type=text].serial {
     font-weight: bolder;
 }
 
+.tooltip-icon {
+    cursor: help;
+    top: 25%;
+    right: -5px;
+    position: absolute;
+    color: gray;
+}
+
+.tooltip-panel {
+    padding: 2px 5px;
+    border: .5px solid #CCCCCC;
+    border-radius: 3px;
+}
+    .tooltip-panel > * {
+        padding: 2px 5px !important;
+    }
+
+    .tooltip-panel > .ui-dialog-titlebar {
+        border-bottom: .5px solid #CCCCCC;
+    }
+
 #ResourceList_DXCTMenu0 {
     position: relative;
     width: 120px !important;
