--- a/WMS/Views/Theme/Default/Tooltips/Create.cshtml
+++ b/WMS/Views/Theme/Default/Tooltips/Create.cshtml
@@ -1,5 +1,16 @@
 ﻿@model Ganedata.Core.Entities.Domain.Tooltip
+@using Ganedata.Core.Entities.Helpers
 
+@section scripts {
+
+    @Html.DevExpress().GetStyleSheets(
+        new StyleSheet { ExtensionType = ExtensionType.SpinEdit, Theme = GaneStaticAppExtensions.DevexTheme }
+        )
+
+    @Html.DevExpress().GetScripts(
+        new Script { ExtensionType = ExtensionType.SpinEdit }
+        )
+}
 
 @{
     ViewBag.Title = "Create New Tooltip";
