--- a/WMS/Views/Theme/Default/Tooltips/Edit.cshtml
+++ b/WMS/Views/Theme/Default/Tooltips/Edit.cshtml
@@ -1,5 +1,16 @@
 ﻿@model Ganedata.Core.Entities.Domain.Tooltip
+@using Ganedata.Core.Entities.Helpers
 
+@section scripts {
+
+    @Html.DevExpress().GetStyleSheets(
+        new StyleSheet { ExtensionType = ExtensionType.SpinEdit, Theme = GaneStaticAppExtensions.DevexTheme }
+        )
+
+    @Html.DevExpress().GetScripts(
+        new Script { ExtensionType = ExtensionType.SpinEdit }
+        )
+}
 
 @{
     ViewBag.Title = "Edit";
@@ -17,56 +28,53 @@
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.TooltipId)
 
-    <div id="tabs" style="visibility: hidden">
-
-        <div id="tooltip-detail">
-            <div class="col-md-6 pull-left">
-                <div class="input-group h-100 justify-content-center align-items-center">
-                    @Html.LabelFor(model => model.Key, htmlAttributes: new { @class = "col-md-4" })
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.Key)
-                        @Html.ValidationMessageFor(model => model.Key)
-                    </div>
-                </div>
-                <div class="input-group h-100 justify-content-center align-items-center">
-                    @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "col-md-4" })
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.Title)
-                        @Html.ValidationMessageFor(model => model.Title)
-                    </div>
-                </div>
-                <div class="input-group h-100 justify-content-center align-items-center">
-                    @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "col-md-4" })
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.Description)
-                        @Html.ValidationMessageFor(model => model.Description)
-                    </div>
+    <div id="tooltip-detail">
+        <div class="col-md-6 pull-left">
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.LabelFor(model => model.Key, htmlAttributes: new { @class = "col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.Key)
+                    @Html.ValidationMessageFor(model => model.Key)
                 </div>
             </div>
-            <div class="col-md-6 pull-left">
-                <div class="input-group h-100 justify-content-center align-items-center">
-                    @Html.LabelFor(model => model.Localization, htmlAttributes: new { @class = "col-md-4" })
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.Localization)
-                        @Html.ValidationMessageFor(model => model.Localization)
-                    </div>
-                </div>
-                @if (ViewBag.IsSuperUser)
-                {
-                    <div class="input-group h-100 justify-content-center align-items-center">
-                        @Html.LabelFor(model => model.TenantId, htmlAttributes: new { @class = "col-md-4" })
-                        <div class="col-md-8">
-                            @Html.DropDownListFor(u => u.TenantId, ViewBag.Tenants as SelectList, "Select Client", new { @class = "chosen-select" })
-                            @Html.ValidationMessageFor(model => model.TenantId)
-                        </div>
-                    </div>
-                }
-                </div>
             <div class="input-group h-100 justify-content-center align-items-center">
-                <div class="col-md-offset-2 col-md-10 bottom-right">
-                    <input type="submit" value="Save" class="btn btn-primary" />
-                    <div class="btn btn-default"> @Html.ActionLink("Back to List", "Index")</div>
+                @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.Title)
+                    @Html.ValidationMessageFor(model => model.Title)
                 </div>
+            </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.Description)
+                    @Html.ValidationMessageFor(model => model.Description)
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 pull-left">
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.LabelFor(model => model.Localization, htmlAttributes: new { @class = "col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.Localization)
+                    @Html.ValidationMessageFor(model => model.Localization)
+                </div>
+            </div>
+            @if (ViewBag.IsSuperUser)
+            {
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.LabelFor(model => model.TenantId, htmlAttributes: new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.DropDownListFor(u => u.TenantId, ViewBag.Tenants as SelectList, "Select Client", new { @class = "chosen-select" })
+                        @Html.ValidationMessageFor(model => model.TenantId)
+                    </div>
+                </div>
+            }
+        </div>
+        <div class="input-group h-100 justify-content-center align-items-center">
+            <div class="col-md-offset-2 col-md-10 bottom-right">
+                <input type="submit" value="Save" class="btn btn-primary" />
+                <div class="btn btn-default"> @Html.ActionLink("Back to List", "Index")</div>
             </div>
         </div>
     </div>
